[gd_scene load_steps=2 format=3 uid="uid://dv8uf6e5fpy5x"]

[ext_resource type="Script" path="res://scripts/views/option.gd" id="1_p2yfh"]

[node name="Option" type="MarginContainer"]
theme_override_constants/margin_bottom = 8
script = ExtResource("1_p2yfh")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Name"
mouse_filter = 0
text = "Name"
text_overrun_behavior = 3

[node name="OptionList" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="ColorPicker" type="ColorPickerButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Switch" type="CheckButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Text" type="TextEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpinBox" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
select_all_on_focus = true

[connection signal="item_selected" from="HBoxContainer/OptionList" to="." method="_on_option_list_item_selected"]
[connection signal="color_changed" from="HBoxContainer/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="toggled" from="HBoxContainer/Switch" to="." method="_on_switch_toggled"]
[connection signal="text_changed" from="HBoxContainer/Text" to="." method="_on_text_text_changed"]
[connection signal="value_changed" from="HBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
